add passive check

--- a/provision/playbooks/omd/data/dev/test.cfg
+++ b/provision/playbooks/omd/data/dev/test.cfg
@@ -21,6 +21,21 @@ define service {
   contact_groups                 example
 }
 
+define service {
+  service_description            check_passive
+  host_name                      testhost_0001
+  use                            srv-pnp,generic-service
+  active_checks_enabled          0
+  check_command                  check_date
+  check_interval                 10
+  contacts                       contact_with_notifications
+  first_notification_delay       0
+  flap_detection_enabled         0
+  max_check_attempts             1
+  notification_interval          0
+  retry_interval                 2
+}
+
 define host {
   name                           testhost_gearman
   alias                          testhost
@@ -135,5 +150,27 @@ define host {
 define host {
   host_name                      testhost_1010
   use                            testhost_gearman
+}
+
+define command {
+  command_name                   dummy_svc_notification
+  command_line                   printf "$HOSTNAME$ - $SERVICEDESC$: $SERVICESTATE$ - $SERVICEOUTPUT$\n" >> $OMD_ROOT/var/log/notifications.log
+}
+
+define command {
+  command_name                   dummy_hst_notification
+  command_line                   printf "$HOSTNAME$: $HOSTSTATE$ - $HOSTOUTPUT$\n" >> $OMD_ROOT/var/log/notifications.log
+}
+
+define contact {
+  contact_name                   contact_with_notifications
+  alias                          contact_with_notifications
+  use                            generic-contact
+  can_submit_commands            1
+  email                          nobody@localhost
+  host_notification_commands     dummy_hst_notification
+  host_notifications_enabled     1
+  service_notification_commands  dummy_svc_notification
+  service_notifications_enabled  1
 }
 
