compile mod_gearman from source too

--- a/provision/playbooks/main.yml
+++ b/provision/playbooks/main.yml
@@ -25,5 +25,6 @@
 - include: node-exporter/node-exporter.yml
 - include: prometheus-nagios-exporter/prometheus-nagios-exporter.yml
 - include: thruk/thruk.yml
+- include: mod-gearman/mod-gearman.yml
 # this should be the last one
 - include: git/git.yml
