add service parents and dependencies

--- a/provision/playbooks/omd/data/dev/ssh.cfg
+++ b/provision/playbooks/omd/data/dev/ssh.cfg
@@ -11,7 +11,7 @@ define command {
 
 define service {
   service_description            check_ssh_tunnel
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_controlmaster
   check_interval                 0.5
@@ -39,41 +39,70 @@ define command {
 
 define service {
   service_description            check_load_by_ssh
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_by_controlmaster!$USER1$/check_load -r -w 10,5,2 -c 20,10,4
   check_interval                 0.5
+  parents                        check_ssh_tunnel
 }
 
 define service {
   service_description            check_proc_by_ssh
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_by_controlmaster!$USER1$/check_procs -w 1000 -c 2000
   check_interval                 0.5
+  parents                        check_ssh_tunnel
 }
 
 define service {
   service_description            check_swap_by_ssh
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_by_controlmaster!$USER1$/check_swap -w 1 -c 1
   check_interval                 0.5
+  parents                        check_ssh_tunnel
 }
 
 define service {
   service_description            check_disk_by_ssh
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_by_controlmaster!$USER1$/check_disk --warning 10% --critical 5% --path /
   check_interval                 0.5
+  parents                        check_ssh_tunnel
 }
 
 define service {
   service_description            check_uptime_by_ssh
-  host_name                      *
+  host_name                      localhost
   use                            generic-service
   check_command                  check_ssh_by_controlmaster!$USER1$/check_check -s -w 50w -c 52w
   check_interval                 0.5
+}
+
+define servicedependency {
+  host_name                           localhost
+  service_description                 check_ssh_tunnel
+  dependent_host_name                 localhost
+  dependent_service_description       check_uptime_by_ssh
+  execution_failure_criteria          p,w,c,u
+  notification_failure_criteria       p,w,c,u
+}
+
+define host {
+  host_name                      localhosts-parentdependency
+  alias                          localhost-parentdependency
+  address                        127.0.0.1
+  use                            host-pnp,generic-host
+  contact_groups                 example
+  icon_image                     linux40.png
+}
+
+define hostdependency {
+  host_name                           localhosts-parentdependency
+  dependent_host_name                 localhost
+  execution_failure_criteria          p,d,u
+  notification_failure_criteria       p,d,u
 }
 
