--- a/provision/playbooks/naemon/naemon.yml
+++ b/provision/playbooks/naemon/naemon.yml
@@ -5,7 +5,7 @@
   - name: "naemon-core build requirements"
     yum: name=autoconf,automake,pkgconfig,help2man,gperf,libtool,gcc,chrpath,glib2-devel,check,check-devel state=installed
   - name: "naemon-livestatus build requirements"
-    yum: name=gcc-c++,libicu-devel state=installed
+    yum: name=gcc-c++,libicu-devel,cppunit-devel state=installed
   - name: "replace naemon binary path in init script"
     lineinfile:
         dest: /omd/sites/dev/etc/init.d/naemon
