provision: put all yum deps in a single task

--- a/devbox/provision/omd/omd.yml
+++ b/devbox/provision/omd/omd.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: all
   tasks:
-  - yum:
+  - name: "install omd / perl dependencies"
+    yum:
       name:
         - omd-labs-edition-daily
         - make
