--- a/devbox/provision/thruk/thruk.yml
+++ b/devbox/provision/thruk/thruk.yml
@@ -3,7 +3,7 @@
 - hosts: all
   tasks:
   - name: "thruk build requirements"
-    yum: name=make,perl-Module-Install state=installed
+    yum: name=make,perl-Module-Install,npm state=installed
   - name: "git clone thruk"
     command: git clone git://github.com/sni/Thruk.git
     args:
