--- a/devbox/provision/node-exporter/node-exporter.yml
+++ b/devbox/provision/node-exporter/node-exporter.yml
@@ -1,24 +1,6 @@
 ---
 - hosts: all
-  become: true
-  become_user: mon
-  become_method: su
-  become_flags: '-l'
   tasks:
-  - name: "install node_exporter"
-    shell: "go install github.com/prometheus/node_exporter@latest"
-    args:
-      chdir: /omd/sites/mon
-      creates: /omd/sites/mon/go/bin/node_exporter
-
-- hosts: all
-  tasks:
-  - file:
-      src: /omd/sites/mon/go/bin/node_exporter
-      dest: /omd/sites/mon/local/bin/node_exporter
-      owner: mon
-      group: mon
-      state: link
   - copy: src=/box/devbox/provision/node-exporter/data/init dest=/omd/sites/mon/etc/init.d/node-exporter owner=mon group=mon mode=0755
   - file:
       src: ../init.d/node-exporter
@@ -27,6 +9,8 @@
       group: mon
       state: link
   - copy: src=/box/devbox/provision/node-exporter/data/01-node-exporter.yml dest=/omd/sites/mon/etc/prometheus/prometheus.d/scrape_configs/static/01-node-exporter.yml owner=mon group=mon mode=0644
-  - command: omd start mon node-exporter
-  - command: omd reload mon prometheus
+  - name: omd reload mon node-exporter
+    shell: "if omd status -b mon node-exporter >/dev/null; then omd reload mon node-exporter; else omd start mon node-exporter; fi"
+  - name: omd reload mon prometheus
+    shell: "if omd status -b mon prometheus >/dev/null; then omd reload mon prometheus; else omd start mon prometheus; fi"
   - copy: src=/box/devbox/provision/node-exporter/data/node.json dest=/omd/sites/mon/var/grafana/dashboards/node.json owner=mon group=mon mode=0644
